--- a/.github/workflows/build-rng.yml
+++ b/.github/workflows/build-rng.yml
@@ -27,13 +27,13 @@ jobs:
           IFS=$'\n'
           for odd_name in *.odd; do
             base_name="$(echo "$odd_name"| sed -E 's#\.[^.]*$##g')";
-          # Expand versioning variables
+            # Expand versioning variables
             java -DentityExpansionLimit=9000000 -jar $GITHUB_WORKSPACE/saxon-he-12.1.jar -xi:on -o:$GITHUB_WORKSPACE/${base_name}-expanded.odd -s:"${odd_name}" -xsl:${GITHUB_WORKSPACE}/main/.github/xslt/expandVars.xsl GITHUB_REF_NAME="${{ github.ref.name }}" GITHUB_SHA="${{ github.sha }}" DATE_STR=$(git log -1 --format=%cd --date=format:"%-d %B %Y")
-          # Create FULL ODD
+            # Create FULL ODD
             java -DentityExpansionLimit=9000000 -jar $GITHUB_WORKSPACE/saxon-he-12.1.jar -xi:on -o:$GITHUB_WORKSPACE/${base_name}-full.odd "$GITHUB_WORKSPACE/${base_name}-expanded.odd" $GITHUB_WORKSPACE/tei/odds/odd2odd.xsl
-          # Create RNG
+            # Create RNG
             $GITHUB_WORKSPACE/tei/bin/teitorng "$GITHUB_WORKSPACE/${base_name}-full.odd" "../rng/${base_name}.rng";
-          # Create HTML
+            # Create HTML
             java -DentityExpansionLimit=9000000 -jar $GITHUB_WORKSPACE/saxon-he-12.1.jar -xi:on -o:../documentation/${base_name}.html "$GITHUB_WORKSPACE/${base_name}-full.odd" $GITHUB_WORKSPACE/tei/odds/odd2html.xsl cssFile='css/tei.css' cssPrintFile='css/tei-print.css'
           done;
           ${GITHUB_WORKSPACE}/main/.github/scripts/create_index.sh >${GITHUB_WORKSPACE}/main/index.html
@@ -41,4 +41,4 @@ jobs:
           git config --global user.name 'ODD Bot'
           git config --global user.email '<>'
           git add ../rng/*.rng ../documentation/*.html
-          git diff-index --quiet HEAD || (git commit -am "ci(build): generate rng and documentation" && git push)
+          git diff-index --quiet HEAD || (git commit -am "chore(build): generate rng and documentation" && git push)
