ci: only build docs/rng on dev branches

--- a/.github/workflows/build-rng.yml
+++ b/.github/workflows/build-rng.yml
@@ -2,7 +2,7 @@ name: Build Schemata and Documentation
 on:
   push:
     branches:
-      - epsilon
+      - dev*
       
   workflow_dispatch:
 jobs:
